Complete Notebook 2: Data Cleaning (matches thesis methodology)
- Exactly follows 2021 cleaning workflow
- 10 skip logic rules with negative value coding
- 12 categorical variable recodings
- MICE imputation for remaining missing values
- Comprehensive documentation with summary table
- Exports datos_preprocesados_FA.csv for Factor Analysis

Phase 1 COMPLETE: Both notebooks ready for review

--- a/notebooks/01_initial_data_exploration.ipynb
+++ b/notebooks/01_initial_data_exploration.ipynb
@@ -19,7 +19,7 @@
         "**Study Design:**\n",
         "- **Sample:** N = 242 adolescents (ages 13-17)\n",
         "- **Location:** Rural schools in Barú, Colombia\n",
-        "- **Data Collection:** 2021\n",
+        "- **Data Collection:** April 2019\n",
         "- **Survey:** 15 questions on sexual behavior, attitudes, and risk perceptions\n",
         "- **Ethics:** IRB approved, parental consent + adolescent assent\n",
         "\n",
@@ -86,7 +86,7 @@
       "source": [
         "## 2. Load Data <a id='load'></a>\n",
         "\n",
-        "**Note:** Raw data files are not included in this public repository due to privacy and ethics requirements. The analysis uses anonymized participant data from the 2021 study. See `Data/README.md` for more information.\n"
+        "**Note:** Raw data files are not included in this public repository due to privacy and ethics requirements. The analysis uses anonymized participant data from the 2019 study. See `Data/README.md` for more information.\n"
       ]
     },
     {
