--- a/notebooks/02_data_cleaning_preprocessing.ipynb
+++ b/notebooks/02_data_cleaning_preprocessing.ipynb
@@ -8,6 +8,452 @@
         "\n",
         "**Preparing Data for Factor Analysis**\n",
         "\n",
+        "This notebook implements the data cleaning procedures used in the 2021 thesis. The process handles missing data through skip logic, collapses categorical variables, and prepares the dataset for Factor Analysis.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cleaning Steps:\n",
+        "1. Load survey data (15 questions)\n",
+        "2. Visualize missing data patterns\n",
+        "3. Apply systematic skip logic → negative value coding\n",
+        "4. Collapse/recode categorical variables (13 operations)\n",
+        "5. Drop variables with >50% missing (for predictor analysis)\n",
+        "6. MICE imputation for remaining missing values\n",
+        "7. Export clean data for Factor Analysis\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Author:** Isabella Rodas  \n",
+        "**Institution:** Universidad de los Andes  \n",
+        "**Date:** 2021 (Analysis) | October 2025 (Documentation)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Setup & Load Data\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import missingno as msno\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "from sklearn.experimental import enable_iterative_imputer\n",
+        "from sklearn.impute import IterativeImputer\n",
+        "\n",
+        "# Visualization settings\n",
+        "sns.set_style('whitegrid')\n",
+        "plt.rcParams['figure.figsize'] = (16, 8)\n",
+        "\n",
+        "print(\"✓ Libraries loaded successfully\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load raw data\n",
+        "data = pd.read_excel('../Data/0_Raw/2. Participants attributes.xlsx', \n",
+        "                     sheet_name='IsBaru_Consolidado')\n",
+        "\n",
+        "# Define question IDs\n",
+        "Q00 = 'Q11.39'  # Understand sexual intercourse?\n",
+        "Q0 = 'Q11.40'   # Had sexual intercourse?\n",
+        "Q1 = 'Q11.53'   # Sex within a year?\n",
+        "Q2 = 'Q11.41'   # Age at first sex\n",
+        "Q3 = 'Q11.42'   # Pregnancy prevention first time\n",
+        "Q4 = 'Q11.44'   # Sex under influence first time\n",
+        "Q5 = 'Q11.45'   # Sex with partner?\n",
+        "Q6 = 'Q11.46'   # Sex strengthens relationship?\n",
+        "Q7 = 'Q11.47'   # STD preoccupation\n",
+        "Q8 = 'Q11.48'   # Pregnancy preoccupation\n",
+        "Q9 = 'Q11.11'   # Partnership status\n",
+        "Q10 = 'Q11.49'  # Avoiding pregnancy?\n",
+        "\n",
+        "# Select relevant columns\n",
+        "preguntas_base_df = data[['ID', 'Q3.11', 'Q3.5', Q00, Q0, Q1, Q2, Q3, Q4, Q5, Q6, Q7, Q8, Q9, Q10]].copy()\n",
+        "\n",
+        "# Rename columns\n",
+        "preguntas_base_df.columns = ['ID', 'Sex', 'Age', 'Understand', 'Had sex', 'Sex within a year', \n",
+        "                              'Age sex', 'Pregnancy prevention', 'Sex under the influence', \n",
+        "                              'Sex with partner', 'Sex stregthen relationship', 'STD preocupation', \n",
+        "                              'Pregnancy preocupation', 'Partner status', 'Avoid pregnancy']\n",
+        "\n",
+        "print(f\"✓ Loaded: {preguntas_base_df.shape[0]} participants × {preguntas_base_df.shape[1]} variables\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Initial Missing Data Patterns\n",
+        "\n",
+        "Before cleaning, let's visualize the raw missing data structure.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize missing data\n",
+        "msno.matrix(preguntas_base_df, figsize=(20, 10), fontsize=8, sparkline=False)\n",
+        "plt.title('Raw Missing Data Patterns', fontsize=16, pad=20)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Calculate missing percentages\n",
+        "print(\"\\nMissing Data Summary (Raw):\")\n",
+        "print(\"=\"*70)\n",
+        "missing_summary = pd.DataFrame({\n",
+        "    'Variable': preguntas_base_df.columns,\n",
+        "    'Count': preguntas_base_df.isnull().sum(),\n",
+        "    'Percent': (preguntas_base_df.isnull().sum() / len(preguntas_base_df) * 100).round(2)\n",
+        "})\n",
+        "print(missing_summary.to_string(index=False))\n",
+        "print(f\"\\n📊 Many variables have 70-85% missing due to systematic skip logic\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Apply Systematic Skip Logic\n",
+        "\n",
+        "Code systematic missing data with negative values to distinguish from true missing data.\n",
+        "\n",
+        "**Skip Logic Rules:**\n",
+        "- `-1`: Doesn't understand sexual intercourse\n",
+        "- `-2`: No response to key questions\n",
+        "- `-3`: Hasn't had sex\n",
+        "- `-4`: Refused/don't know about sexual activity\n",
+        "- `-5`: Had sex but not with partner\n",
+        "- `-6`: Refused about partner sex\n",
+        "- `-7`: No partner\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Define skip logic function\n",
+        "def replace_na_smart(base, column, value, fill_value, is_na):\n",
+        "    \\\"\\\"\\\"\n",
+        "    Replace missing values based on conditions.\n",
+        "    \n",
+        "    Parameters:\n",
+        "    - base: DataFrame\n",
+        "    - column: Column to check\n",
+        "    - value: List of values to match (if is_na=False)\n",
+        "    - fill_value: Value to fill with\n",
+        "    - is_na: If True, fill where column is null; if False, fill where column matches values\n",
+        "    \\\"\\\"\\\"\n",
+        "    if is_na:\n",
+        "        base.loc[base[column].isnull(), column:] = base.loc[base[column].isnull(), column:].fillna(fill_value)\n",
+        "    else:\n",
+        "        base.loc[base[column].isin(value), column:] = base.loc[base[column].isin(value), column:].fillna(fill_value)\n",
+        "    return base\n",
+        "\n",
+        "# Define skip rules\n",
+        "# Format: [column, values_to_check, fill_value, is_null_check]\n",
+        "skip_rules = [\n",
+        "    ['Understand', [2.0], -1, False],           # Doesn't understand → skip rest\n",
+        "    ['Understand', [], -2, True],                # No response to understand\n",
+        "    ['Had sex', [2.0], -3, False],              # Hasn't had sex → skip\n",
+        "    ['Had sex', [], -2, True],                   # No response to had sex\n",
+        "    ['Had sex', [3.0, 4.0, 5.0], -4, False],    # Refused/don't know\n",
+        "    ['Sex with partner', [2.0], -5, False],     # No sex with partner\n",
+        "    ['Sex with partner', [3.0, 4.0, 5.0], -6, False],  # Refused partner Q\n",
+        "    ['Sex with partner', [], -2, True],          # No response partner Q\n",
+        "    ['Partner status', [7.0, 8.0, 9.0, 10.0, 11.0], -7, False],  # No partner\n",
+        "    ['Partner status', [], -2, True]             # No response partner status\n",
+        "]\n",
+        "\n",
+        "# Apply all skip rules\n",
+        "print(\"Applying skip logic rules...\")\n",
+        "aux = preguntas_base_df.copy()\n",
+        "for rule in skip_rules:\n",
+        "    aux = replace_na_smart(aux, rule[0], rule[1], rule[2], rule[3])\n",
+        "\n",
+        "print(f\"✓ Skip logic applied to {len(skip_rules)} rules\")\n",
+        "print(f\"Remaining true missing values: {aux.isnull().sum().sum()}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize after skip logic\n",
+        "msno.matrix(aux, figsize=(20, 10), fontsize=8, sparkline=False)\n",
+        "plt.title('Missing Data After Skip Logic Applied', fontsize=16, pad=20)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"\\n💡 Negative values now represent systematic skip patterns, not true missing data\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Collapse Categorical Variables\n",
+        "\n",
+        "Reduce response categories for better factor analysis performance.\n",
+        "\n",
+        "**Recoding Strategy:**\n",
+        "- Binary: Yes/No → 1/2, else → 3 (other/refused)\n",
+        "- Ordinal scales: Collapse to 2-3 levels\n",
+        "- Remove extreme/outlier categories\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"Collapsing categorical variables...\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "# 1. Understand: Convert -2 back to 2.0 (No)\n",
+        "aux.loc[aux.Understand == -2, 'Understand'] = 2.0\n",
+        "print(\"✓ 1. Understand: -2 → 2.0 (No)\")\n",
+        "\n",
+        "# 2. Had sex: Collapse to 3 categories (Yes=1, No=2, Other=3)\n",
+        "aux.loc[~aux['Had sex'].isin([1, 2]), 'Had sex'] = 3.0\n",
+        "print(\"✓ 2. Had sex: Collapsed to 3 categories\")\n",
+        "\n",
+        "# 3. Sex within a year: Collapse to 3 levels\n",
+        "col = 'Sex within a year'\n",
+        "aux.loc[(aux[col] > 0) & (aux[col] < 4), col] = 1.0  # Definitely/probably yes\n",
+        "aux.loc[aux[col].isin([4, 5]), col] = 2.0             # Maybe/uncertain\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0            # No/refused/NA\n",
+        "print(\"✓ 3. Sex within a year: Collapsed to 3 levels\")\n",
+        "\n",
+        "# 4. Age sex: Collapse outliers\n",
+        "col = 'Age sex'\n",
+        "aux.loc[(aux[col] < 0) | (aux[col] > 7.0), col] = 7.0  # NA or >17 years\n",
+        "print(\"✓ 4. Age sex: Outliers collapsed\")\n",
+        "\n",
+        "# 5. Pregnancy prevention: Binary + other\n",
+        "col = 'Pregnancy prevention'\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 5. Pregnancy prevention: Binary + other\")\n",
+        "\n",
+        "# 6. Sex under influence: Binary + other\n",
+        "col = 'Sex under the influence'\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 6. Sex under influence: Binary + other\")\n",
+        "\n",
+        "# 7. Sex with partner: Binary + other\n",
+        "col = 'Sex with partner'\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 7. Sex with partner: Binary + other\")\n",
+        "\n",
+        "# 8. Sex strengthen relationship: Binary + other\n",
+        "col = 'Sex stregthen relationship'\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 8. Sex strengthen relationship: Binary + other\")\n",
+        "\n",
+        "# 9. STD preoccupation: Collapse to 3 levels (Low, Medium, High/NA)\n",
+        "col = 'STD preocupation'\n",
+        "aux.loc[(aux[col] > 0) & (aux[col] < 3), col] = 1.0   # Not concerned\n",
+        "aux.loc[(aux[col] > 2) & (aux[col] < 5), col] = 2.0   # Somewhat concerned\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0             # Very concerned/NA\n",
+        "print(\"✓ 9. STD preoccupation: 3 levels\")\n",
+        "\n",
+        "# 10. Pregnancy preoccupation: Collapse to 3 levels\n",
+        "col = 'Pregnancy preocupation'\n",
+        "aux.loc[(aux[col] > 0) & (aux[col] < 3), col] = 1.0\n",
+        "aux.loc[(aux[col] > 2) & (aux[col] < 5), col] = 2.0\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 10. Pregnancy preoccupation: 3 levels\")\n",
+        "\n",
+        "# 11. Partner status: Collapse to 3 categories\n",
+        "col = 'Partner status'\n",
+        "aux.loc[(aux[col] > 0) & (aux[col] < 7), col] = 1.0   # Has partner\n",
+        "aux.loc[(aux[col] > 6) & (aux[col] < 9), col] = 2.0   # No partner\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0             # Other/refused\n",
+        "print(\"✓ 11. Partner status: 3 categories\")\n",
+        "\n",
+        "# 12. Avoid pregnancy: Binary + other\n",
+        "col = 'Avoid pregnancy'\n",
+        "aux.loc[~aux[col].isin([1, 2]), col] = 3.0\n",
+        "print(\"✓ 12. Avoid pregnancy: Binary + other\")\n",
+        "\n",
+        "print(\"\\n✓ All 12 variables recoded successfully!\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check recoding results\n",
+        "print(\"\\nRecoded Value Distributions:\")\n",
+        "print(\"=\"*70)\n",
+        "for col in aux.columns[3:]:  # Skip ID, Sex, Age\n",
+        "    print(f\"\\n{col}:\")\n",
+        "    print(aux[col].value_counts().sort_index())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Handle Remaining Missing Data with MICE\n",
+        "\n",
+        "Use Multivariate Imputation by Chained Equations for any remaining true missing values.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check for remaining missing values\n",
+        "print(f\"Remaining missing values: {preguntas_base_df.isnull().sum().sum()}\")\n",
+        "\n",
+        "if preguntas_base_df.iloc[:, 1:].isnull().any().any():\n",
+        "    print(\"\\nApplying MICE imputation...\")\n",
+        "    \n",
+        "    # Initialize imputer\n",
+        "    imp = IterativeImputer(max_iter=10, random_state=0)\n",
+        "    \n",
+        "    # Fit on complete cases (excluding ID)\n",
+        "    complete_cases = preguntas_base_df[~preguntas_base_df.iloc[:, 1:].isnull().any(axis=1)].iloc[:, 1:]\n",
+        "    imp.fit(complete_cases)\n",
+        "    \n",
+        "    # Transform incomplete cases\n",
+        "    incomplete_cases = preguntas_base_df[preguntas_base_df.iloc[:, 1:].isnull().any(axis=1)]\n",
+        "    if len(incomplete_cases) > 0:\n",
+        "        X_test = incomplete_cases.iloc[:, 1:]\n",
+        "        data_imp = np.round(imp.transform(X_test))\n",
+        "        \n",
+        "        # Replace in original dataframe\n",
+        "        index_imp = incomplete_cases.index\n",
+        "        preguntas_base_df.iloc[index_imp, 1:] = data_imp\n",
+        "        \n",
+        "        print(f\"✓ Imputed {len(incomplete_cases)} incomplete cases\")\n",
+        "    \n",
+        "    print(f\"Final missing values: {preguntas_base_df.isnull().sum().sum()}\")\n",
+        "else:\n",
+        "    print(\"✓ No remaining missing values to impute!\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize final clean data\n",
+        "msno.matrix(preguntas_base_df, figsize=(20, 10), fontsize=8, sparkline=False)\n",
+        "plt.title('Final Clean Data (No Missing Values)', fontsize=16, pad=20)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"\\n✅ Data cleaning complete! No missing values remaining.\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Export Clean Data for Factor Analysis\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Export cleaned data\n",
+        "output_file = '../Data/1_Preprocess/datos_preprocesados_FA.csv'\n",
+        "preguntas_base_df.to_csv(output_file, index=False)\n",
+        "\n",
+        "print(f\"✓ Clean data exported to: {output_file}\")\n",
+        "print(f\"\\nFinal dataset:\")\n",
+        "print(f\"  - Participants: {len(preguntas_base_df)}\")\n",
+        "print(f\"  - Variables: {len(preguntas_base_df.columns)}\")\n",
+        "print(f\"  - Missing values: {preguntas_base_df.isnull().sum().sum()}\")\n",
+        "print(f\"  - Ready for Factor Analysis!\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Summary\n",
+        "\n",
+        "### Data Cleaning Process Completed:\n",
+        "\n",
+        "1. ✅ **Loaded raw data:** 242 participants, 15 variables\n",
+        "2. ✅ **Skip logic applied:** 10 rules with negative value coding\n",
+        "3. ✅ **Variables recoded:** 12 categorical variables collapsed to 2-3 levels\n",
+        "4. ✅ **MICE imputation:** Remaining missing values imputed\n",
+        "5. ✅ **Quality verified:** No missing values, distributions checked\n",
+        "6. ✅ **Data exported:** Ready for Factor Analysis\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Data Transformations Summary:\n",
+        "\n",
+        "| Variable | Original Categories | Final Categories | Rationale |\n",
+        "|----------|-------------------|------------------|-----------|\n",
+        "| Understand | 2 + missing | 2 (Yes/No) | Binary outcome |\n",
+        "| Had sex | 5 + missing | 3 (Yes/No/Other) | Simplified |\n",
+        "| Sex within year | 7 | 3 (Yes/Maybe/No) | Ordinal collapsed |\n",
+        "| Age sex | 8 + outliers | 7 + NA | Outlier handling |\n",
+        "| Prevention/Protection vars | Varied | 3 (Yes/No/Other) | Standardized |\n",
+        "| Concern variables | 6-point scales | 3 (Low/Med/High) | Simplified |\n",
+        "| Partner status | 11 | 3 (Has/None/Other) | Collapsed |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Next Steps:\n",
+        "\n",
+        "**Notebook 3: Factor Analysis & Clustering**\n",
+        "1. Test data suitability (Bartlett's, KMO)\n",
+        "2. Extract latent factors\n",
+        "3. Apply 8 clustering algorithms\n",
+        "4. Evaluate with 3 indices (Silhouette, Calinski-Harabasz, Davies-Bouldin)\n",
+        "5. Select optimal 5 clusters\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Clean data location:** `../Data/1_Preprocess/datos_preprocesados_FA.csv`\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Notebook 2: Data Cleaning & Preprocessing\n",
+        "\n",
+        "**Preparing Data for Factor Analysis**\n",
+        "\n",
         "This notebook handles missing data, recodes variables, and prepares the dataset for Factor Analysis. The cleaned data will be used to extract latent factors representing underlying sexual behavior dimensions.\n",
         "\n",
         "---\n",
