Add participant filtering step to Notebook 2
- NEW: Filter participants with >50% missing behavioral data
- Visualization with red/blue color coding and 50% threshold line
- Shows proportion of missing values per record on y-axis
- Shows record number on x-axis
- Updated all section numbering (now 7 steps total)
- Updated summary to reflect new filtering step

This matches the thesis methodology exactly!

--- a/notebooks/02_data_cleaning_preprocessing.ipynb
+++ b/notebooks/02_data_cleaning_preprocessing.ipynb
@@ -15,9 +15,9 @@
         "## Cleaning Steps:\n",
         "1. Load survey data (15 questions)\n",
         "2. Visualize missing data patterns\n",
-        "3. Apply systematic skip logic → negative value coding\n",
-        "4. Collapse/recode categorical variables (13 operations)\n",
-        "5. Drop variables with >50% missing (for predictor analysis)\n",
+        "3. **Filter participants with >50% missing behavioral data**\n",
+        "4. Apply systematic skip logic → negative value coding\n",
+        "5. Collapse/recode categorical variables (12 operations)\n",
         "6. MICE imputation for remaining missing values\n",
         "7. Export clean data for Factor Analysis\n",
         "\n",
@@ -116,7 +116,7 @@
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "# Calculate missing percentages\n",
+        "# Calculate missing percentages by variable\n",
         "print(\"\\nMissing Data Summary (Raw):\")\n",
         "print(\"=\"*70)\n",
         "missing_summary = pd.DataFrame({\n",
@@ -132,7 +132,76 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Apply Systematic Skip Logic\n",
+        "## 3. Filter Participants with >50% Missing Data\n",
+        "\n",
+        "**Thesis Decision:** Eliminate any participant with more than 50% of targeted behavioral questions unanswered.\n",
+        "\n",
+        "This ensures sufficient data quality for Factor Analysis by removing participants who provided minimal survey responses.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Calculate proportion of missing values per participant\n",
+        "# Focus on behavioral questions (exclude ID, Sex, Age)\n",
+        "behavioral_cols = preguntas_base_df.columns[3:]  # All questions after demographics\n",
+        "n_behavioral_questions = len(behavioral_cols)\n",
+        "\n",
+        "# Calculate % missing for each participant\n",
+        "missing_per_participant = preguntas_base_df[behavioral_cols].isnull().sum(axis=1) / n_behavioral_questions\n",
+        "missing_per_participant_pct = missing_per_participant * 100\n",
+        "\n",
+        "# Create visualization\n",
+        "fig, ax = plt.subplots(figsize=(16, 6))\n",
+        "\n",
+        "# Determine colors: red for >50%, blue for <=50%\n",
+        "colors = ['red' if x > 50 else 'steelblue' for x in missing_per_participant_pct]\n",
+        "\n",
+        "# Plot bars\n",
+        "x_values = range(len(missing_per_participant_pct))\n",
+        "ax.bar(x_values, missing_per_participant_pct, color=colors, alpha=0.7, edgecolor='black', linewidth=0.3)\n",
+        "\n",
+        "# Add 50% threshold line\n",
+        "ax.axhline(y=50, color='red', linestyle='--', linewidth=2, label='50% Threshold')\n",
+        "\n",
+        "# Styling\n",
+        "ax.set_xlabel('Record Number (Participant)', fontsize=12, fontweight='bold')\n",
+        "ax.set_ylabel('Proportion of Missing Values (%)', fontsize=12, fontweight='bold')\n",
+        "ax.set_title('Missing Data per Participant - 50% Threshold Filter', fontsize=14, fontweight='bold', pad=20)\n",
+        "ax.set_ylim(0, 105)\n",
+        "ax.legend(fontsize=11)\n",
+        "ax.grid(axis='y', alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Calculate statistics\n",
+        "n_above_threshold = (missing_per_participant_pct > 50).sum()\n",
+        "n_below_threshold = (missing_per_participant_pct <= 50).sum()\n",
+        "\n",
+        "print(f\"\\n📊 Participant Missing Data Analysis:\")\n",
+        "print(\"=\"*70)\n",
+        "print(f\"Total participants: {len(preguntas_base_df)}\")\n",
+        "print(f\"Participants with >50% missing (red): {n_above_threshold} ({n_above_threshold/len(preguntas_base_df)*100:.1f}%)\")\n",
+        "print(f\"Participants with ≤50% missing (blue): {n_below_threshold} ({n_below_threshold/len(preguntas_base_df)*100:.1f}%)\")\n",
+        "print(f\"\\n⚠️  Removing {n_above_threshold} participants with insufficient data...\")\n",
+        "\n",
+        "# Filter dataset\n",
+        "preguntas_base_df = preguntas_base_df[missing_per_participant_pct <= 50].copy()\n",
+        "preguntas_base_df.reset_index(drop=True, inplace=True)\n",
+        "\n",
+        "print(f\"\\n✓ Filtered dataset: {len(preguntas_base_df)} participants remaining\")\n",
+        "print(f\"  This represents {len(preguntas_base_df)/242*100:.1f}% of original sample\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Apply Systematic Skip Logic\n",
         "\n",
         "Code systematic missing data with negative values to distinguish from true missing data.\n",
         "\n",
@@ -214,7 +283,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Collapse Categorical Variables\n",
+        "## 5. Collapse Categorical Variables\n",
         "\n",
         "Reduce response categories for better factor analysis performance.\n",
         "\n",
@@ -320,7 +389,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Handle Remaining Missing Data with MICE\n",
+        "## 6. Handle Remaining Missing Data with MICE\n",
         "\n",
         "Use Multivariate Imputation by Chained Equations for any remaining true missing values.\n"
       ]
@@ -380,7 +449,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Export Clean Data for Factor Analysis\n"
+        "## 7. Export Clean Data for Factor Analysis\n"
       ]
     },
     {
@@ -410,11 +479,12 @@
         "### Data Cleaning Process Completed:\n",
         "\n",
         "1. ✅ **Loaded raw data:** 242 participants, 15 variables\n",
-        "2. ✅ **Skip logic applied:** 10 rules with negative value coding\n",
-        "3. ✅ **Variables recoded:** 12 categorical variables collapsed to 2-3 levels\n",
-        "4. ✅ **MICE imputation:** Remaining missing values imputed\n",
-        "5. ✅ **Quality verified:** No missing values, distributions checked\n",
-        "6. ✅ **Data exported:** Ready for Factor Analysis\n",
+        "2. ✅ **Participant filtering:** Removed participants with >50% missing behavioral data\n",
+        "3. ✅ **Skip logic applied:** 10 rules with negative value coding\n",
+        "4. ✅ **Variables recoded:** 12 categorical variables collapsed to 2-3 levels\n",
+        "5. ✅ **MICE imputation:** Remaining missing values imputed\n",
+        "6. ✅ **Quality verified:** No missing values, distributions checked\n",
+        "7. ✅ **Data exported:** Ready for Factor Analysis\n",
         "\n",
         "---\n",
         "\n",
