Add comprehensive skip logic diagnostics to debug filtering issue
MAJOR DEBUGGING UPDATE:

User reports skip logic NOT working correctly:
- When Understand=2, subsequent questions should be null/-1
- But they're seeing questions NOT being skipped properly
- This explains why 0 participants are filtered (should be 14)

Added 3 levels of diagnostics:

1. FUNCTION TEST:
   - Tests replace_na_smart() with simple example
   - Shows if basic skip logic mechanism works
   - Expected: row with Q1=2 should get Q2-Q4 filled with -1

2. RULE-BY-RULE TRACKING:
   - Shows how many missing values each rule fills
   - Helps identify which rules aren't working
   - Shows progression through 10 skip rules

3. REAL DATA CHECK:
   - Finds participants with Understand=2
   - Shows their complete row
   - Verifies if subsequent columns are -1 or still null

Next: User will run Cell 5 and report:
- Does function test pass?
- How many values does Rule 1 fill?
- Are Understand=2 participants properly skipped?

This will pinpoint exact issue with skip logic implementation.

--- a/notebooks/02_data_cleaning_preprocessing.ipynb
+++ b/notebooks/02_data_cleaning_preprocessing.ipynb
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -170,14 +170,19 @@
         "# Define skip logic function (from original 2021 preprocessing)\n",
         "def replace_na_smart(base, column, value, fill_value, is_na):\n",
         "    '''\n",
-        "    Replace missing values based on conditions.\n",
+        "    Replace missing values based on skip logic conditions.\n",
         "    \n",
         "    Parameters:\n",
         "    - base: DataFrame to modify\n",
         "    - column: Column to check for conditions\n",
         "    - value: List of values to match (when is_na=False)\n",
         "    - fill_value: Value to fill missing data with\n",
-        "    - is_na: If True, fill nulls; if False, fill based on value matches\n",
+        "    - is_na: If True, fill where column is null; if False, fill where column matches values\n",
+        "    \n",
+        "    How it works:\n",
+        "    - Selects rows based on condition (null OR value match)\n",
+        "    - Fills ALL columns from 'column' onwards (column:) with fill_value\n",
+        "    - Only fills where values are currently null (fillna)\n",
         "    \n",
         "    Returns:\n",
         "    - Modified DataFrame\n",
@@ -189,6 +194,29 @@
         "        # Fill all columns from 'column' onwards where 'column' matches values\n",
         "        base.loc[base[column].isin(value), column:] = base.loc[base[column].isin(value), column:].fillna(fill_value)\n",
         "    return base\n",
+        "\n",
+        "# TEST: Verify function works correctly\n",
+        "print(\"🧪 TESTING skip logic function:\")\n",
+        "print(\"=\"*70)\n",
+        "test_df = pd.DataFrame({\n",
+        "    'ID': ['test1', 'test2', 'test3'],\n",
+        "    'Q1': [1.0, 2.0, 1.0],  # test2 has value 2\n",
+        "    'Q2': [1.0, np.nan, 1.0],\n",
+        "    'Q3': [1.0, np.nan, np.nan],\n",
+        "    'Q4': [np.nan, np.nan, 1.0]\n",
+        "})\n",
+        "print(\"Before skip logic:\")\n",
+        "print(test_df)\n",
+        "print()\n",
+        "\n",
+        "# Apply skip rule: when Q1=2, fill Q1 onwards with -1\n",
+        "test_df = replace_na_smart(test_df, 'Q1', [2.0], -1, False)\n",
+        "print(\"After rule: Q1=[2.0] → fill with -1:\")\n",
+        "print(test_df)\n",
+        "print()\n",
+        "print(\"✅ Expected: test2 should have Q2=-1, Q3=-1, Q4=-1\")\n",
+        "print(\"=\"*70)\n",
+        "print()\n",
         "\n",
         "# Define skip rules (EXACT replication from original 2021 code)\n",
         "# Format: [column, values_to_check, fill_value, is_null_check]\n",
@@ -205,16 +233,46 @@
         "    ['Partner status', [7.0, 8.0, 9.0, 10.0, 11.0], -2, True]    # Null on Partner status → code as -2\n",
         "]\n",
         "\n",
-        "# Apply all skip rules\n",
+        "# Apply all skip rules with detailed tracking\n",
         "print(\"Applying skip logic rules...\")\n",
         "print(\"=\"*70)\n",
         "aux = preguntas_base_df.copy()\n",
         "\n",
+        "# Track missing count before\n",
+        "missing_before = aux.isnull().sum().sum()\n",
+        "print(f\"Missing values BEFORE skip logic: {missing_before}\")\n",
+        "print()\n",
+        "\n",
         "for i, rule in enumerate(skip_rules):\n",
+        "    missing_before_rule = aux.isnull().sum().sum()\n",
+        "    \n",
+        "    # Apply the rule\n",
         "    aux = replace_na_smart(aux, rule[0], rule[1], rule[2], rule[3])\n",
         "    \n",
+        "    missing_after_rule = aux.isnull().sum().sum()\n",
+        "    filled = missing_before_rule - missing_after_rule\n",
+        "    \n",
+        "    print(f\"Rule {i+1}: {rule[0]} | values={rule[1]} | fill={rule[2]} | is_na={rule[3]}\")\n",
+        "    print(f\"  → Filled {filled} missing values\")\n",
+        "    \n",
+        "print()\n",
         "print(f\"✓ Skip logic applied: {len(skip_rules)} rules processed\")\n",
         "print(f\"✓ Remaining TRUE missing values: {aux.isnull().sum().sum()}\")\n",
+        "print()\n",
+        "\n",
+        "# DIAGNOSTIC: Check a specific case\n",
+        "print(\"🔍 DIAGNOSTIC - Checking skip logic effect:\")\n",
+        "print(\"=\"*70)\n",
+        "# Find participants who don't understand (Understand == 2)\n",
+        "dont_understand = aux[aux['Understand'] == 2.0]\n",
+        "if len(dont_understand) > 0:\n",
+        "    print(f\"Found {len(dont_understand)} participants with Understand=2 (don't understand)\")\n",
+        "    print(f\"\\nFirst example (ID: {dont_understand.iloc[0]['ID']}):\")\n",
+        "    print(dont_understand.iloc[0])\n",
+        "    print()\n",
+        "    print(\"❓ Question: Are columns after 'Understand' filled with -1?\")\n",
+        "else:\n",
+        "    print(\"No participants with Understand=2 found\")\n",
         "\n",
         "# Visualize after skip logic\n",
         "msno.matrix(aux, figsize=(20, 10), fontsize=8, sparkline=False)\n",
